# Horse-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Docs/: COOKER.md  FEATURES.md  Lua-Scripting.md  PACKAGER.md  PROJECT.md  SCRIPTING.md  STRUCTURE.md
Docs/schemas/: horselevel.schema.json  horsematerial.schema.json  horseproject.schema.json
Editor/: CMakeLists.txt
Editor/Source/: D3D11ViewportWidget.cpp  D3D11ViewportWidget.h  EditorLogSink.h  EditorPreferences.cpp  EditorPreferences.h  EditorWindow.cpp  EditorWindow.h  QtInputMap.h  ThemeManager.cpp  ThemeManager.h  main.cpp
Editor/Source/Dialogs/: BuildDialog.cpp  BuildDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h
Editor/Source/Panels/: ConsolePanel.cpp  ConsolePanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  GameViewport.cpp  GameViewport.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneViewport.cpp  SceneViewport.h
Engine/Physics/: CMakeLists.txt
Engine/Physics/Include/HorseEngine/Physics/: PhysicsComponents.h  PhysicsSystem.h
Engine/Physics/Source/: PhysicsSystem.cpp
Engine/RenderD3D11/: CMakeLists.txt
Engine/RenderD3D11/Include/HorseEngine/Render/: D3D11Buffer.h  D3D11Renderer.h  D3D11Shader.h  D3D11Texture.h
Engine/RenderD3D11/Source/: D3D11Buffer.cpp  D3D11Renderer.cpp  D3D11Shader.cpp  D3D11Texture.cpp
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Include/HorseEngine/: Core.h  Engine.h
Engine/Runtime/Include/HorseEngine/Asset/: Asset.h  AssetImporter.h  AssetManager.h  MeshImporter.h  TextureImporter.h
Engine/Runtime/Include/HorseEngine/Core/: FileSystem.h  Hash.h  Input.h  JobSystem.h  Logging.h  Memory.h  Time.h
Engine/Runtime/Include/HorseEngine/Game/: GameModule.h
Engine/Runtime/Include/HorseEngine/Platform/: Win32Window.h
Engine/Runtime/Include/HorseEngine/Project/: Project.h  ProjectSerializer.h
Engine/Runtime/Include/HorseEngine/Render/: Frustum.h  Material.h  MaterialRegistry.h  MaterialSerializer.h  Renderer.h
Engine/Runtime/Include/HorseEngine/Scene/: Components.h  Entity.h  Entity.inl  Prefab.h  PrefabSerializer.h  Scene.h  SceneSerializer.h  ScriptableEntity.h  UUID.h
Engine/Runtime/Include/HorseEngine/Scripting/: LuaScriptEngine.h
Engine/Runtime/Shaders/: Skybox.hlsl  Triangle.hlsl
Engine/Runtime/Source/: Engine.cpp  Material.cpp  MaterialRegistry.cpp  MaterialSerializer.cpp  Runner.cpp
Engine/Runtime/Source/Asset/: AssetManager.cpp  MeshImporter.cpp  TextureImporter.cpp
Engine/Runtime/Source/Core/: FileSystem.cpp  JobSystem.cpp  Logging.cpp  Memory.cpp  Time.cpp
Engine/Runtime/Source/Platform/: Win32Input.cpp  Win32Window.cpp
Engine/Runtime/Source/Project/: ProjectSerializer.cpp
Engine/Runtime/Source/Scene/: Entity.cpp  PrefabSerializer.cpp  Scene.cpp  SceneSerializer.cpp  UUID.cpp
Engine/Runtime/Source/Scripting/: LuaScriptEngine.cpp
Game/: CMakeLists.txt
Game/Source/: GameModule.cpp  PlayerController.cpp  PlayerController.h
Projects/SandboxProject/Assets/Scripts/: HorizontalMover.lua  InputTest.lua
Tools/: CMakeLists.txt
Tools/Cooker/: CMakeLists.txt
Tools/Cooker/Source/: AssetCooker.h  CookerRegistry.h  LevelCooker.cpp  LevelCooker.h  Main.cpp  MaterialCooker.cpp  MaterialCooker.h  MeshCooker.cpp  MeshCooker.h  ProjectCooker.cpp  ProjectCooker.h  ScriptCooker.cpp  ScriptCooker.h  TextureCooker.cpp  TextureCooker.h
Tools/Packager/: CMakeLists.txt
Tools/Packager/Source/: Main.cpp  PakWriter.cpp  PakWriter.h
